UI-3221 [GateIn] Alignment Bugs on Add user, Group vs Page managenent

--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Form/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Form/Style.less
@@ -280,7 +280,7 @@ input[disabled], select[disabled], textarea[disabled] {
 	height: 26px;
 	line-height: 18px;	
 	outline: none;
-	padding: 4px 6px;
+	padding: 3px 6px;
 }
 
 .selectboxMini  {
