--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Portlets/UIOrganizationPortlet/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Portlets/UIOrganizationPortlet/Style.less
@@ -133,7 +133,10 @@
 		width: 240px;
 		.title {
 			line-height: 25px;
-	    padding: 5px 10px;
+	    	padding: 5px 10px;
+	    	.actionIcon{
+	    		padding: 3px 4px 1px;
+	    	}
 	   	.tooltip {
 	   		font-weight:normal;
 	   	}
